--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 nodeenv==1.7.0
 packaging==21.3
+Pillow==9.3.0
 platformdirs==2.5.3
 pre-commit==2.20.0
 PyJWT==2.6.0
