--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 distlib==0.3.6
 Django==4.1.3
+django-health-check==3.17.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
@@ -21,6 +22,7 @@ packaging==21.3
 Pillow==9.3.0
 platformdirs==2.5.3
 pre-commit==2.20.0
+psutil==5.9.4
 PyJWT==2.6.0
 pyparsing==3.0.9
 pytz==2022.6
