--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Deprecated==1.2.13
 distlib==0.3.6
 Django==4.1.3
 django-health-check==3.17.0
+django-redis==5.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
@@ -25,6 +26,7 @@ Pillow==9.3.0
 platformdirs==2.5.3
 pre-commit==2.20.0
 psutil==5.9.4
+psycopg2-binary==2.9.5
 PyJWT==2.6.0
 pyparsing==3.0.9
 pytz==2022.6
